--- a/static/reset.css
+++ b/static/reset.css
@@ -61,3 +61,9 @@ h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+
+
+.square {
+  border: solid black 1px;
+  border-radius: 1rem;
+}
