--- a/static/reset.css
+++ b/static/reset.css
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .buy_button{
   text-decorations: none;
-  min-width: 6rem;
+  width: 6rem;
   padding: .5rem;
   background-color: var(--green);
 }
