--- a/static/reset.css
+++ b/static/reset.css
@@ -87,4 +87,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 6rem;
   padding: .5rem;
   background-color: var(--green);
+  
+  display: flex;
+  justify-content: center;
 }
