--- a/static/reset.css
+++ b/static/reset.css
@@ -26,8 +26,9 @@
 
 
 
-  --background-dark: var(--oc-gray-9);
-  --card-dark: var(--oc-gray-8);
+  --background-dark: #3b1f30;
+  --card-dark: #3e4c67;
+
   --title-font-dark: var(--oc-gray-1);
   --normal-font-dark: var(--oc-gray-4);
 
@@ -81,12 +82,11 @@ input, button, textarea, select {
 }
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
-  
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: var(--bold-wght);
-  color: var(--title-font-dark);
+  color: var(--title-font-dark); 
 }
 
 #root, #__next {
@@ -95,10 +95,12 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .element--border--primary {
-  border: solid var(--card-border-dark) 1px;
   border-radius: 1rem;
 }
-
+.title {
+  width: fit-content;
+  color: #efeeec;
+}
 
 
 .settings_button{
@@ -149,10 +151,12 @@ h1, h2, h3, h4, h5, h6 {
 }
     
 .selected {
-  background-color: var(--oc-teal-8);
+  background-color: #586b4d;
+  color: #989f87;
 }
 .unselected {
-  background-color: var(--oc-cyan-8);
+  background-color: #989f87;
+  color: #586b4d;
 }
 
 input, textarea{
@@ -171,4 +175,42 @@ summary {
 
 summary > * {
     display: inline;
+}
+
+
+
+/* CSS */
+.button-74 {
+  background-color: #efeeec;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #994f4e;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-74:hover {
+  background-color: #fff;
+}
+
+.button-74:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .button-74 {
+    min-width: 120px;
+    padding: 0 25px;
+  }
 }
