--- a/static/reset.css
+++ b/static/reset.css
@@ -106,6 +106,10 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--title-font-dark); 
 }
 
+p {
+	color: var(--normal-font-dark)
+}
+
 #root, #__next {
   isolation: isolate;
 }
