--- a/static/reset.css
+++ b/static/reset.css
@@ -34,7 +34,7 @@
   --primary-button-border: var(--moss-green);
   --primary-button-text: var(--bone-white);
 
-  --secondary-button-background: var(--gorange-ornage);
+  --secondary-button-background: var(--gorange-orange);
   --secondary-button-border: var(--hamlet-red);
   --secondary-button-text: var(--bone-white);
 
