--- a/static/reset.css
+++ b/static/reset.css
@@ -47,7 +47,7 @@
   
   --card-dark: var(--twilight-blue);
   --card-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230c142f' fill-opacity='0.1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
-  --card-border: 2px solid black;
+  --card-border: 2px solid var(--skelton-navy);
   
   --title-font-dark: var(--oc-gray-1);
   --normal-font-dark: var(--oc-gray-4);
