--- a/static/reset.css
+++ b/static/reset.css
@@ -145,6 +145,12 @@ a:active {
 	border-radius: 1rem;
 	overflow: hidden;
 	padding: var(--med-space);
+
+  display: flex;
+  flex-direction: column;
+  gap: var(--med-space);
+
+  color: var(--normal-font-dark);
 }
 
 .element--border--primary {
@@ -178,7 +184,8 @@ a:active {
 
 .flex {
   display: flex;
-  gap: .5rem;
+  gap: var(--med-space);
+  width: 100%;
 }
 
 
@@ -230,40 +237,3 @@ summary > * {
     display: inline;
 }
 
-
-
-/* CSS */
-.button-74 {
-  background-color: #efeeec;
-  border: 2px solid #422800;
-  border-radius: 30px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #994f4e;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 600;
-  font-size: 18px;
-  padding: 0 18px;
-  line-height: 50px;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-74:hover {
-  background-color: #fff;
-}
-
-.button-74:active {
-  box-shadow: #422800 2px 2px 0 0;
-  transform: translate(2px, 2px);
-}
-
-@media (min-width: 768px) {
-  .button-74 {
-    min-width: 120px;
-    padding: 0 25px;
-  }
-}
